<resources>
    <string name="app_name">Fragment Act</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="graph">Graph</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>