<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/drawer_article"
            android:icon="@drawable/baseline_article_24"
            android:title="@string/article"/>
        <item
            android:id="@+id/drawer_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/drawer_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>